@@ -1,46 +1,51 @@
 ################################
-# OPTIONS
+#
+# THIS IS A TEMPLATE FILE FOR THE pyCMBS configuration
+#
+# Comments in this file are by '#'
+# You can add an arbitrary number of comments here above
+#
+#
+#
+####################################################################
+# OPTIONS (general global options)
+####################################################################
+# CAUTION: It is important that the options in the following block
+# are provided one option per line *without* any comments in between!!!
 #
 # basemap:       [0,1]; specifies if Basemap should be used for plotting
 #
-# report:        specifies root name of the report (will be used for name of output directory)
+# report:        specifies root name of the report (will be used for name of output directory as well)
 #
-# temp_dir:      you need to have write access to this directory. All temporary data will be stored there
+# report_format  specifies the output format of the plots generated [png,pdf]
+#
+#
+# temp_dir:      STRING: you need to have write access to this directory. All temporary data will be stored there
 #                if the directory data is not existing yet, it will be created.
 #
 # clean_tempdir: [0,1]; specifies if temporary directory shall be cleaned. This option
 #                is useful if one wants to force that pyCDO creates all intermediate files
 #
-# PLEASE NOTE, that commented lines in the
+# summary_only: [0,1]: specifies if the generated report shall comprise only summary figures.
+#                      no maps will be generated then. This makes processing faster and the report has
+#                      much less figures, but does obviously then not contain all the information
+#                      if this option is TRUE, then several of the plotting options in the INI file for each
+#                      variable are deactivated.
+#
+# config_dir: specifies the directory where the configuration INI files are located
 #
 ################################
 # OPTIONS
 # (please note that comments not allowed between the different options!)
 ################################
-<<<<<<< .working
 basemap,0
-report=null_test
-=======
-basemap,1
-report=evaclimod
->>>>>>> .merge-right.r413
-report_format=PNG
+report=EvaCLIMOD
+report_format=png
 author=Alexander Loew, Mikhail Itkin
-temp_dir=/data/workspace/projects/evaclimod/code/lib/pyCMBS/framework/tmp/
+temp_dir=/home/m300028/shared/dev/svn/pyCMBS/framework/tmp_processing/
 clean_tempdir,0
 summary_only,0
 config_dir=./configuration/
-
-#
-#temp_dir=/net/nas2/export/eo/workspace/m300028/temp_scratch_processing/
-
-# HOAPS checking
-#temp_dir=/net/nas2/export/eo/workspace/m300036/pycmbs-cmsaf/tmp
-#-->
-#temp_dir=/net/nas2/export/eo/workspace/m300036/pycmbs-cmsaf/tmp
-#/home/m300028/nas-server-mpi/workspace/m300036/pycmbs-cmsaf/tmp
-
-#temp_dir=/home/m300028/nas-server-mpi/workspace/m300028/pycmbs-cmsaf/tmp
 
 ################################
 # Specify variables to analyze
@@ -55,40 +60,49 @@ config_dir=./configuration/
 # [monthly,season] specifies the temporal scale of the analysis
 #
 ################################
-cfc,1,season
+albedo,1,season
+albedo_vis,1,monthly
+albedo_nir,1,monthly
+sis,0,season
+surface_upward_flux,0,season
+tree,0,monthly
+temperature,0,season
+rain,0,season
+evap,0,monthly
+hair,0,monthly
+wind,0,monthly
+twpa,0,monthly
+wvpa,0,monthly
+late,0,monthly
+budg,0,monthly
+phenology_faPAR,0,monthly
+gpp,0,monthly
 
 ################################
-# specify period to analyze
+# specify period to analyze (not used at the moment!)
 # start-time YYYY-MM-DD
 # stop-time  YYYY-MM-DD
+# use_for_obs: use time period also for observations; if false, then either the complete observational record is used or a time specified explicitly in the variable INI file
 ################################
-<<<<<<< .working
 1983-01-01
-2000-12-31
+1999-12-31
 use_for_observations,0
-=======
-1992-01-01
-1993-12-31
-use_for_observations,1
->>>>>>> .merge-right.r413
 
 ################################
 # Register models to analyze
-# ID,TYPE,EXPERIMENET,PATH
+# ID,TYPE,EXPERIMENT,PATH
 #
 # ID: unique ID to specify model, for CMIP5 ID is also part of the filenames!
+#
 # TYPE: Type of model to be anaylzed (JSBACH_BOT, CMIP5, JSBACH_RAW)
+#
 # EXPERIMENT: an experiment identifier
+#
 # PATH: directory path where data is located
 #
-# The modes MUST NOT be separated with whitepsaces at the moment!
+# The modes MUST NOT be separated with whitespaces at the moment!
 ################################
 
-
 #--- CMIP5 model experiments ---
-MPI-ESM-LR,CMIP5,amip,/data/workspace/projects/evaclimod/data/CMIP5/
-#MPI-ESM-MR,CMIP5,amip,/home/m300028/shared/data/CMIP5/EvaCliMod/
-
-#MPI-ESM-LR,CMIP5,historical,/home/m300028/shared/data/CMIP5/EvaCliMod/
-#MPI-ESM-MR,CMIP5,historical,/home/m300028/shared/data/CMIP5/EvaCliMod/
-
+MPI-ESM-LR,CMIP5,amip,/home/m300028/shared/data/CMIP5/EvaCliMod/
+MPI-ESM-MR,CMIP5,amip,/home/m300028/shared/data/CMIP5/EvaCliMod/
