@@ -1,6 +1,6 @@
 from unittest import TestCase
-from data import *
-from diagnostic import *
+from pyCMBS.data import *
+from pyCMBS.diagnostic import *
 import scipy as sc
 import pylab as pl
 import numpy as np
